--- a/MvcHomeWork/Views/客戶資料/Details.cshtml
+++ b/MvcHomeWork/Views/客戶資料/Details.cshtml
@@ -4,6 +4,25 @@
     ViewBag.Title = "Details";
 }
 
+<script>
+    function sendRequest(url, callback) {
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+
+        request.onload = function () {
+            if (request.status >= 200 && request.status < 400) {
+                // Success!
+                callback(request.response);
+            }
+        };
+        request.send();
+    }
+
+    sendRequest('/客戶資料/DataToJson', function (response) {
+        console.log(response);
+    });
+</script>
+
 <h2>Details</h2>
 
 <div>
